<resources>
    <string name="app_name">Sportz Interactive</string>
    <string name="oponent_1">Oponent1</string>
    <string name="oponent_2">Oponent2</string>
    <string name="match_status">Match Status</string>
    <string name="vs">Vs</string>
    <string name="oponent1_teamname">Teamname1</string>
    <string name="oponent2_teamname">Teamname2</string>
    <string name="opponent1_team_filter">Opponent 1 team</string>
    <string name="show_all">Show All</string>
    <string name="opponent2_team_filter">Opponent 2 team</string>
</resources>