<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/ll_showAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/show_all"
            android:background="@drawable/outer_box_shade"
            android:textSize="12sp"
            android:textStyle="bold"

            />


        <TextView
            android:id="@+id/ll_opponent1TeamFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/opponent1_team_filter"
            android:background="@drawable/outer_box_shade"

            android:textSize="12sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/ll_opponent2TeamFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/opponent2_team_filter"
            android:background="@drawable/outer_box_shade"

            android:textSize="12sp"
            android:textStyle="bold"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>