<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="2dp"
    android:paddingBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_match1"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="20dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ll_oponent1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/oponent_1"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/ll_vs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:text="@string/vs"
                    android:textStyle="bold"
                    android:layout_weight="2"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/ll_oponent2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oponent_2"
                    android:textStyle="bold"
                    android:paddingRight="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:layout_weight="3"
                    android:textSize="12sp" />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ll_matchStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/match_status"
                    android:textSize="12sp" />

            </LinearLayout>



        </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ll_winningTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oponent_2"
                android:layout_gravity="center"
                android:paddingBottom="2dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="12sp" />

        </LinearLayout>





    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>